# eagle

./: .gitignore  README.md  build_debug.sh  build_release.sh
src/: CMakeLists.txt
src/eagle/: CMakeLists.txt  main.cpp
src/fsmanager/: CMakeLists.txt  UnixFiles.cpp  WinFiles.cpp  fsmanager.hpp
